oblig2patch/src/tests/oblig2/errors/type2_fail.cmp
program type2_fail
begin
    proc main()
    begin
    in
        if 42 then  /* error, expression not bool */
            printstr( "Should not happen" )
        fi
    end
end